--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,12 +7,18 @@ jobs:
   build:
     docker:
       # specify the version you desire here
-       - image: circleci/ruby:2.4.1-node-browsers
-
+      - image: circleci/ruby:2.4.1-node-browsers
+        environment:
+          PGHOST: 127.0.0.1
+          PGUSER: root
+          RAILS_ENV: test
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
       # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/postgres:9.4
+      - image: circleci/postgres:9.6.4
+        POSTGRES_USER: root
+        POSTGRES_DB: circle_test
+        POSTGRES_PASSWORD: ""
 
     working_directory: ~/repo
 
