--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -67,12 +67,12 @@ jobs:
       - run:
           name: run tests
           command: |
-            mkdir /tmp/coverage
+            mkdir /tmp/test-results
             TEST_FILES="$(circleci tests glob "spec/**/*_spec.rb" | circleci tests split --split-by=timings)"
             ./cc-test-reporter before-build
             bundle exec rspec --format progress \
                             --format RspecJunitFormatter \
-                            --out /tmp/coverage/rspec.xml \
+                            --out /tmp/test-results/rspec.xml \
                             --format progress \
                             $TEST_FILES
             ./cc-test-reporter after-build --coverage-input-type simplecov --exit-code $?
